infra/development/k8s/worker-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      containers:
        - name: worker-service
          image: nimbus-worker-service
          imagePullPolicy: IfNotPresent
