infra/development/k8s/debezium-kafka-connect-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
        - name: connect
          image: quay.io/debezium/connect:2.4
          resources:
            requests:
              memory: "512Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: connect
spec:
  selector:
    app: connect
  ports:
    - port: 8083
      targetPort: 8083
