infra/development/k8s/job-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      containers:
        - name: job-service
          image: nimbus-job-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
spec:
  selector:
    app: job-service
  ports:
    - port: 9094
      targetPort: 9094
