infra/development/k8s/resource-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-service
  template:
    metadata:
      labels:
        app: resource-service
    spec:
      containers:
        - name: resource-service
          image: nimbus-resource-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9093
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: resource-service
spec:
  selector:
    app: resource-service
  ports:
    - port: 9093
      targetPort: 9093
